--- a/IDWalks/appsettings.json
+++ b/IDWalks/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "IndiaWalks": "Server=(LocalDB)\\MSSQLLocalDB;Database=IndiawalksDb;Trusted_Connection=true"
+  },
+  "Jwt": {
+    "Key": "2njefhu4345nkdnjksfhlsjuo09nfsg",
+    "Issuer": "https://localhost:7145",
+    "Audience": "https://localhost:7145"
   }
 }
